Clean up overall appearance of webpage.
Modify to clarify unofficial nature of page and remove minor bugs.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <a class="w3-hide-large w3-hide-medium w3-bar-item w3-button w3-hover-theme" href="/contact">Contact</a>
   <h4 class="w3-bar-item"><b>Page Navigation</b></h4>
   <a class="w3-bar-item w3-button w3-hover-theme" id="focus-welcome" href="#welcome" onclick="set_focus_welcome()">Welcome</a>
-  <a class="w3-bar-item w3-button w3-hover-theme" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
+  <a class="w3-bar-item w3-button w3-theme w3-hover-theme-dark" id="focus-focus-vandalia" href="#focus-vandalia" onclick="set_focus_focus_vandalia()">Focus Vandalia</a>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -54,7 +54,7 @@
 		<div class="w3-padding-64 w3-container" id="welcome">
 			<img src="images/CHP_cropped.png" alt="Cassel Hills Pool" class="w3-image">
 			<h1 class="w3-text-theme">Welcome to Cassel Hills Pool!</h1>
-			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quiet Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="/amenities">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="/memberships">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="/memberships">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">click here</a> to view <a href="files/2023 Members and Visitors Guide.pdf" target="_blank">the 2023 Member and Visitor's Guide</a> for more details.</p>
+			<p>Welcome to the 2023 Cassel Hills Pool Season!  <br>Tucked away in a quiet Vandalia neighborhood, Cassel Hills Pool offers safe and enjoyable summer fun for all ages. With <a href="/amenities">a large variety of amenities</a> in addition to our two pools, Cassel Hills Poll is the perfect place for you to relax, excercise, or have fun with friends and family! As a well-established part of the Vandalia community, Cassel Hills Pool is proud to serve <a href="/memberships">pool members, residents of vandalia, and daily admission guests</a>.<br><br>In an effort to improve the pool experience for members and guests, a number of changes have been implemented for the 2023 season.  These changes include a new Admission Policy, a new Pool Manager, and <a href="/memberships">an updated Membership Rate structure and Daily Admission fee</a>.  To learn more about these changes and review the Pool Rules, <a href="https://vandaliaohio.org/DocumentCenter/View/9253/2023-Member-and-Visitor-Guide-PDF" target="_blank">click here to view the official 2023 Member and Visitor's Guide <sup><i class="fa fa-external-link"></i></sup></a> for more details.</p>
 		</div>
 		<div class="w3-container w3-padding-64 w3-hide-medium w3-hide-large" id="current-status-sidebar">
 			<h4 class="w3-text-theme-dark">Cassel Hills Pool is currently: </h4>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="w3-container w3-theme-l1">
-      <p>Developed by <a href="https://aarontook.github.io/" target="_blank" style="text-decoration:none">AaronTook</a><br>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" style="text-decoration:none">w3.css</a></p>
+      <p>Unofficial website developed by <a href="https://aarontook.github.io/" target="_blank" style="text-decoration:none">AaronTook</a><br>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" style="text-decoration:none">w3.css</a> and <a href="httpshttps://pages.github.com/" target="_blank" style="text-decoration:none">GitHub Pages</a></p>
     </div>
   </footer>
 
