--- a/memberships.html
+++ b/memberships.html
@@ -210,7 +210,7 @@
     </div>
 
     <div class="w3-container w3-theme-l1">
-      <p>Developed by <a href="https://aarontook.github.io/" target="_blank" style="text-decoration:none">AaronTook</a><br>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" style="text-decoration:none">w3.css</a></p>
+      <p>Unofficial website developed by <a href="https://aarontook.github.io/" target="_blank" style="text-decoration:none">AaronTook</a><br>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" style="text-decoration:none">w3.css</a> and <a href="httpshttps://pages.github.com/" target="_blank" style="text-decoration:none">GitHub Pages</a></p>
     </div>
   </footer>
 
